--- a/style/intro.css
+++ b/style/intro.css
@@ -32,13 +32,8 @@ button {
     border-radius: 0.7rem;
     padding: 0.5rem 2rem;
     color: #ffeaee;
-    background: rgb(114, 131, 215);
-    background: linear-gradient(
-        90deg,
-        rgba(114, 131, 215, 1) 0%,
-        rgba(13, 113, 198, 1) 48%,
-        rgba(125, 131, 236, 1) 100%
-    );
+background: rgb(4,1,42);
+background: linear-gradient(90deg, rgba(4,1,42,1) 42%, rgba(2,0,36,1) 53%, rgba(31,9,121,1) 58%, rgba(0,212,255,1) 71%);
     border-color: rgb(114, 131, 215);
     margin: 1rem 0;
 }
@@ -49,13 +44,8 @@ button {
     height: 30%;
     width: 30%;
     color: #ffeaee;
-    background: rgb(114, 131, 215);
-    background: linear-gradient(
-        90deg,
-        rgba(114, 131, 215, 1) 0%,
-        rgba(13, 113, 198, 1) 48%,
-        rgba(125, 131, 236, 1) 100%
-    );
+background: rgb(4,1,42);
+background: linear-gradient(90deg, rgba(4,1,42,1) 42%, rgba(2,0,36,1) 53%, rgba(31,9,121,1) 58%, rgba(0,212,255,1) 71%);
     border: 2px solid rgb(114, 131, 215);
     border-radius: 0.75rem;
     padding: 1rem;
